# faster-im

./: CMakeLists.txt  LICENSE  README.md  autobuild.sh
client/: CMakeLists.txt  calluserservice.cc  calluserservice.h  faster_im_main.cc  imclient  imclient.cc  imclient.h  rpcchannel.cc  rpccontroller.cc
client/db/: db.cc
client/model/: friendmodel.h  groupmodel.cc  groupmodel.h  groupuser.h  offlinemessagemodel.h
client/pb/: user.pb.h
include/: faster_tcpserver.h  faster_threadpool.h  rpcchannel.h  rpccontroller.h  rpcprovider.h  userserver.h  userservice.h
proto/: rpcheader.proto  user.proto
src/: CMakeLists.txt  faster_connpool.cc  faster_eventpool.cc  faster_tcpserver.cc  faster_threadpool.cc  rpcprovider.cc  userserver.cc  userservice.cc
src/app/: user.pb.cc  user.pb.h  user.proto
src/app/callee/: imserver.cc  userservice.cc  userservice.h
src/app/callee/model/: friendmodel.h  group.h  groupmodel.h  groupuser.h  offlinemessagemodel.h  user.h  usermodel.h
src/app/caller/: calluserservice.cc  calluserservice.h  imclient.cc  imclient.h
src/core/: atomic_ptr.hpp  faster_im  faster_im.cpp  faster_im.h  main.cc  public.h  rpc.h
src/im/: user.proto
src/im/callee/db/: db.h
src/model/: friendmodel.cc  offlinemessagemodel.cc  usermodel.cc
src/net/: faster_connpool.cc  faster_connpool.h  faster_eventpool.cc  faster_eventpool.h  faster_mempool.cc  faster_mempool.h  faster_tcpserver.cc  faster_tcpserver.h  faster_threadpool.cc  faster_threadpool.h  fasternet.cpp  fasternet.h  ypipe.hpp
src/net/zmq/: yqueue.hpp
src/pb/: rpcheader.pb.cc  user.pb.cc
src/redis/: redis.cc
src/rpc/: rpcchannel.cc  rpcchannel.h  rpccontroller.cc  rpccontroller.h  rpcheader.pb.cc  rpcheader.pb.h  rpcheader.proto  rpcprovider.cc  rpcprovider.h  zookeeperutil.cc  zookeeperutil.h
src/zk/: zookeeperutil.cc
test/: epoll_server  epoll_server.c  epoll_server.cc  iouring_server  main  (+3 more)
(+8 files in other folders)
